--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -13,29 +13,35 @@
 <main>
     <div class="card-main">
         <div class="main-content">
-            <h1>Login</h1>
+            <h1 class="form-title">Login</h1>
             <form class="form-signin" method="POST" th:action="@{/auth/login}">
-                <fieldset class="form-container">
+                <fieldset class="fieldset-info">
                     <div class="alert alert-danger alert-dismissible fade show" role="alert" th:if="${param.error}">
                         Login e/ou senha inválidos!
                     </div>
 
-                    <input type="text" id="username" class="input-form w-100" name="username" placeholder="Login *"
-                           required minlength="5" maxlength="20" autofocus
-                           title="Por favor, insira um nome de usuário válido.">
+                    <div class="input-group">
+                        <label for="username" class="input-label">Login *</label>
+                        <input type="text" id="username" class="input-form" name="username" placeholder="Digite seu login"
+                               required minlength="5" maxlength="20" autofocus
+                               title="Por favor, insira um nome de usuário válido.">
+                    </div>
 
-                    <input type="password" id="password" class="input-form w-100" name="password" placeholder="Senha *"
-                           required minlength="8" maxlength="20"
-                           title="A senha deve ter pelo menos 8 caracteres.">
+                    <div class="input-group">
+                        <label for="password" class="input-label">Senha *</label>
+                        <input type="password" id="password" class="input-form" name="password" placeholder="Digite sua senha"
+                               required minlength="8" maxlength="20"
+                               title="A senha deve ter pelo menos 8 caracteres.">
+                    </div>
 
-<!--                    <div class="checkbox mb-3">-->
-<!--                        <label>-->
-<!--                            <input type="checkbox" value="lembrar"> Lembrar-me-->
-<!--                        </label>-->
-<!--                    </div>-->
+                    <div class="checkbox mb-3">
+                        <label>
+                            <input type="checkbox" value="lembrar"> Lembrar-me
+                        </label>
+                    </div>
                 </fieldset>
 
-                <button class="submit-input btn btn-primary" type="submit">Entrar</button>
+                <button class="submit-input" type="submit">Entrar</button>
             </form>
         </div>
     </div>
