--- a/src/main/resources/templates/companies/form.html
+++ b/src/main/resources/templates/companies/form.html
@@ -9,16 +9,17 @@
     <title>Registre-se</title>
 </head>
 
-<body class="main-screen">
+<body>
 <header th:replace="~{/fragments/header}"></header>
 <main>
     <div class="card-main">
         <div class="main-content">
             <h1 class="title-page">Cadastrar-se</h1>
-            <form th:action="@{/company/save}" method="post" th:object="${company}"  >
+            <form th:action="@{/company/save}" method="post" th:object="${company}">
                 <input id="input-id" class="input-form" type="hidden" th:field="*{id}"/>
 
-                <fieldset class="form-container">
+                <fieldset class="fieldset-info">
+                    <legend class="fieldset-legend">Informações Básicas</legend>
                     <label class="label-form" for="input-username">Nome de usuário *</label>
                     <input type="text" name="username" id="input-username" class="input-form"
                            placeholder="Nome de usuário *"
@@ -38,14 +39,10 @@
                            type="password"
                            required minlength="8"
                            title="Confirmação da senha deve ter pelo menos 8 caracteres e corresponder à senha fornecida."/>
-
-                    <div id="password-error" class="error-message" style="display: none; color: red;">
-                        As senhas não coincidem. Por favor, verifique.
-                    </div>
                 </fieldset>
 
-                <fieldset class="form-container">
-                    <legend class="form-container-description">Informações Básicas</legend>
+                <fieldset class="fieldset-info">
+                    <legend class="fieldset-legend">Informações da Empresa</legend>
                     <label class="label-form" for="fantasyNameInput">Nome fantasia *</label>
                     <input type="text" id="fantasyNameInput" class="input-form" placeholder="Nome fantasia *"
                            th:field="*{fantasyName}" required maxlength="100"
@@ -55,60 +52,39 @@
                     <label class="label-form" for="cnpjInput">CNPJ *</label>
                     <input type="text" id="cnpjInput" class="input-form" placeholder="CNPJ *" th:field="*{cnpj}"
                            required pattern="\d{14}"
-                           inputmode="numeric" title="Por favor, insira um CNPJ válido com 14 dígitos."/>
+                           title="CNPJ deve ter 14 dígitos."/>
                     <span th:if="${cnpjError}" class="alert alert-danger" th:text="${cnpjError}"></span>
 
-                    <label class="label-form" for="principalActivityInput">Principal atividade *</label>
-                    <input type="text" id="principalActivityInput" class="input-form"
-                           placeholder="Principal atividade *" th:field="*{principalActivity}" required maxlength="150"
-                           title="A principal atividade pode ter no máximo 150 caracteres."/>
-
-                    <label class="label-form" for="urlPageInput">Site da empresa *</label>
-                    <input type="url" id="urlPageInput" class="input-form" placeholder="Site da empresa *"
-                           th:field="*{urlPage}" required pattern="https?://.+"
-                           title="Por favor, insira uma URL válida (ex: http://www.exemplo.com)."/>
-                </fieldset>
-
-                <fieldset class="form-container">
-                    <legend class="form-container-description">Contato</legend>
-                    <label class="label-form" for="input-email">Email *</label>
-                    <input type="email" id="input-email" class="input-form" placeholder="Email" th:field="*{user.email}"
-                           required
+                    <label class="label-form" for="companyEmailInput">E-mail da Empresa *</label>
+                    <input type="email" id="companyEmailInput" class="input-form" placeholder="E-mail da Empresa *"
+                           th:field="*{user.email}" required
                            title="Por favor, insira um endereço de email válido."/>
                     <span th:if="${emailError}" class="alert alert-danger" th:text="${emailError}"></span>
 
-                    <label class="label-form" for="phoneNumberInput">Telefone *</label>
-                    <input type="tel" id="phoneNumberInput" class="input-form" placeholder="Telefone *"
+                    <label class="label-form" for="companyPhoneInput">Telefone da Empresa *</label>
+                    <input type="tel" id="companyPhoneInput" class="input-form" placeholder="Telefone da Empresa *"
                            th:field="*{phoneNumber}" required pattern="\d{10,11}"
                            title="Por favor, insira um número de telefone válido com 10 ou 11 dígitos."/>
-
-                    <label class="label-form" for="personContactInput">Nome do responsável *</label>
-                    <input type="text" id="personContactInput" class="input-form" placeholder="Nome do responsável"
-                           th:field="*{personContact}" required maxlength="100"
-                           title="O nome do responsável pode ter no máximo 100 caracteres."/>
                 </fieldset>
 
-                <fieldset class="form-container">
-                    <legend class="form-container-description">Endereço</legend>
-                    <label class="label-form" for="addressInput">Endereço *</label>
+                <fieldset class="fieldset-info">
+                    <legend class="fieldset-legend">Endereço</legend>
                     <input type="text" id="addressInput" class="input-form" placeholder="Endereço *"
                            th:field="*{address}" required maxlength="200"
                            title="O endereço pode ter no máximo 200 caracteres."/>
 
                     <div class="file-upload">
                         <label for="addressVerify">Adicionar Comprovante (PDF)</label>
-                        <input type="file" id="addressVerify" class="file-input" th:field="*{addressProof}"  required/>
+                        <input type="file" id="addressVerify" class="file-input" th:field="*{addressProof}" required/>
                     </div>
-
                 </fieldset>
 
                 <div class="buttons-actions">
-                    <input class="submit-input" type="submit" value="Salvar"/>
+                    <input class="submit-input" type="submit" value="Salvar">
                 </div>
-            </form>*
+            </form>
         </div>
     </div>
-
     <div th:replace="~{/fragments/scripts}"></div>
 </main>
 </body>
