--- a/src/main/resources/templates/students/form.html
+++ b/src/main/resources/templates/students/form.html
@@ -70,6 +70,10 @@
                     <input id="input-password-confirm" class="input-form" placeholder="Confirme sua senha" type="password"
                            required minlength="8"
                            title="Confirmação da senha deve ter pelo menos 8 caracteres e corresponder à senha fornecida."/>
+
+                    <div id="password-error" class="error-message" style="display: none; color: red;">
+                        As senhas não coincidem. Por favor, verifique.
+                    </div>
                 </fieldset>
 
                 <fieldset class="fieldset-info">
